@@ -1,3 +1,9 @@
+2002-11-25  Alan W. Irwin <irwin@beluga.phys.uvic.ca>
+
+	* Makefile.am files: some reorganization, but mostly adding
+	  EXTRA_DIST macros so the distributed tarball generated by
+	  make dist has everything it needs.
+
 2002-11-24  Alan W. Irwin <irwin@beluga.phys.uvic.ca>
 
 	* Add plConfig.h to installed headers.
